build-docker.yml: Add debug output
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -172,7 +172,7 @@ jobs:
               && docker exec nextcloudpi ncc status \
               && docker exec nextcloudpi redis-cli -s "$redis_socket" -a "$redis_pw" set redisready yes \
               && docker exec nextcloudpi redis-cli -s "$redis_socket" -a "$redis_pw" get redisready \
-              && curl -k https://localhost:8443/activate/ > /dev/null
+              && curl -k https://localhost:8443/activate/
             then
               success=true
               echo -e "${LOG_CICD} Startup successful"
