--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,12 +10,12 @@ on:
         type: boolean
         description: 'Build/test SD images?'
         required: false
-        default: true
+        default: false
       lxd:
         type: boolean
         description: 'Build/test LXD image?'
         required: false
-        default: true
+        default: false
       docker:
         type: boolean
         description: 'Build/test docker images?'
@@ -25,7 +25,7 @@ on:
         type: boolean
         description: 'Run curl-installer/upgrade tests?'
         required: false
-        default: true
+        default: false
       release:
         type: boolean
         description: 'Release images to GH and docker registry'
