--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -183,14 +183,14 @@ jobs:
               continue
             fi
           
-            echo -ne "${LOG_CICD} Is maintenance mode disabled? ............. "
+            echo -ne "${LOG_CICD} Is maintenance mode disabled? .............. "
             [[ "$(docker exec nextcloudpi ncc maintenance:mode)" =~ .*disabled.* ]] || {
               echo -e "${CHECK_FAILED}"
               continue
             }
             echo -e "${CHECK_OK}"
             
-            echo -ne "${LOG_CICD} Check NC status ........................... "
+            echo -ne "${LOG_CICD} Check NC status ............................ "
             ncc_status="$(docker exec nextcloudpi ncc status)" || { 
               echo -e "${CHECK_FAILED}"
               echo "$ncc_status" |& awk "{ print \"${LOG_DIAG} \" \$0 }"
@@ -198,7 +198,7 @@ jobs:
             }
             echo -e "${CHECK_OK}"
             
-            echo -ne "${LOG_CICD} Attempt writing and reading to redis db ... "
+            echo -ne "${LOG_CICD} Attempt writing and reading to redis db .... "
             docker exec nextcloudpi redis-cli -s "$redis_socket" -a "$redis_pw" set redisready yes > /dev/null 2>&1 \
             && docker exec nextcloudpi redis-cli -s "$redis_socket" -a "$redis_pw" get redisready > /dev/null 2>&1 || {
               echo -e "${CHECK_FAILED}"
@@ -206,12 +206,13 @@ jobs:
             }
             echo -e "${CHECK_OK}"
             
-            echo -ne "${LOG_CICD} Try to access activation page ............. "
+            echo -ne "${LOG_CICD} Try to access activation page .............. "
             result="$(curl --no-progress-meter -k https://localhost:8443/activate/)" || {
               echo -e "${CHECK_FAILED}"
               echo "$result" |& awk "{ print \"${LOG_DIAG} \" \$0 }"
-              echo "${LOG_CICD} curl http://localhost:8443/activate/"
-              curl http://localhost:8443/activate/ |& awk "{ print \"${LOG_DIAG} \" \$0 }"
+              echo -e "${LOG_CICD} curl http://localhost:8443"
+              curl http://localhost:8443 |& awk "{ print \"${LOG_DIAG} \" \$0 }"
+              docker exec nextcloudpi a2query -s |& awk "{ print \"${LOG_DIAG} \" \$0 }"
               continue
             }
             echo -e "${CHECK_OK}"
