--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -217,7 +217,7 @@ jobs:
               curl http://localhost:8443 |& awk "{ print \"${LOG_DIAG} \" \$0 }"
               echo -e "${LOG_CICD} a2query"
               docker exec nextcloudpi a2query -s |& awk "{ print \"${LOG_DIAG} \" \$0 }"
-              echo -e "${LOG_CICD apache2 config files"
+              echo -e "${LOG_CICD} apache2 config files"
               docker exec nextcloudpi ls -l /etc/apache2/sites-{available,enabled} /data/etc/apache2/sites-{available,enabled} |& awk "{ print \"${LOG_DIAG} \" \$0 }"
               echo -e "${LOG_CICD} 000-default.conf"
               docker exec nextcloudpi cat /data/etc/apache2/sites-enabled/000-default.conf || true
