build-docker.yml: Fix syntax error
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -239,7 +239,7 @@ jobs:
           echo -e "${LOG_CICD} === DEBUGGING ==="
           echo -e "${LOG_CICD} a2query"
           docker exec nextcloudpi a2query -s |& awk "{ print \"${LOG_DIAG} \" \$0 }"
-          echo -e "${LOG_CICD apache2 config files"
+          echo -e "${LOG_CICD} apache2 config files"
           docker exec nextcloudpi ls -l /etc/apache2/sites-{available,enabled} /data/etc/apache2/sites-{available,enabled} |& awk "{ print \"${LOG_DIAG} \" \$0 }"
           echo -e "${LOG_CICD} 000-default.conf"
           docker exec nextcloudpi cat /data/etc/apache2/sites-enabled/000-default.conf || true
