--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -210,7 +210,7 @@ jobs:
               echo -e "${LOG_CICD} a2query -m"
               docker exec nextcloudpi a2query -m |& awk "{ print \"${LOG_DIAG} \" \$0 }"
               echo -e "${LOG_CICD} apache2 -S"
-              docker exec nextcloudpi apache -S |& awk "{ print \"${LOG_DIAG} \" \$0 }"
+              docker exec nextcloudpi apache2 -S |& awk "{ print \"${LOG_DIAG} \" \$0 }"
               echo -e "${LOG_CICD} apache2 config files"
               docker exec nextcloudpi ls -l /etc/apache2/sites-{available,enabled} /data/etc/apache2/sites-{available,enabled} |& awk "{ print \"${LOG_DIAG} \" \$0 }"
               echo -e "${LOG_CICD} 000-default.conf"
@@ -240,7 +240,7 @@ jobs:
           echo -e "${LOG_CICD} a2query -m"
           docker exec nextcloudpi a2query -m |& awk "{ print \"${LOG_DIAG} \" \$0 }"
           echo -e "${LOG_CICD} apache2 -S"
-          docker exec nextcloudpi apache -S |& awk "{ print \"${LOG_DIAG} \" \$0 }"
+          docker exec nextcloudpi apache2 -S |& awk "{ print \"${LOG_DIAG} \" \$0 }"
           echo -e "${LOG_CICD} apache2 config files"
           docker exec nextcloudpi ls -l /etc/apache2/sites-{available,enabled} /data/etc/apache2/sites-{available,enabled} |& awk "{ print \"${LOG_DIAG} \" \$0 }"
           echo -e "${LOG_CICD} 000-default.conf"
