--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -212,6 +212,7 @@ jobs:
               docker exec nextcloudpi a2query -m |& awk "{ print \"${LOG_DIAG} \" \$0 }"
               echo -e "${LOG_CICD} apache2 -S"
               docker exec nextcloudpi apache2 -S |& awk "{ print \"${LOG_DIAG} \" \$0 }"
+              docker exec nextcloudpi cat /etc/apache2/apache2.conf |& awk "{ print \"${LOG_DIAG} \" \$0 }"
               echo -e "${LOG_CICD} apache2 config files"
               docker exec nextcloudpi ls -l /etc/apache2/sites-{available,enabled} /data/etc/apache2/sites-{available,enabled} |& awk "{ print \"${LOG_DIAG} \" \$0 }"
               echo -e "${LOG_CICD} 000-default.conf"
