build-docker.yml: Add debug output
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -212,6 +212,8 @@ jobs:
               echo -e "${LOG_CICD} apache2 -S"
               docker exec nextcloudpi apache2 -S |& awk "{ print \"${LOG_DIAG} \" \$0 }"
               docker exec nextcloudpi cat /etc/apache2/apache2.conf |& awk "{ print \"${LOG_DIAG} \" \$0 }"
+              echo -e "${LOG_CICD} /etc/apache2/envvars"
+              docker exec nextcloudpi cat /etc/apache2/envvars |& awk "{ print \"${LOG_DIAG} \" \$0 }"
               echo -e "${LOG_CICD} apache2 config files"
               docker exec nextcloudpi ls -l /etc/apache2/sites-{available,enabled} /data/etc/apache2/sites-{available,enabled} |& awk "{ print \"${LOG_DIAG} \" \$0 }"
               echo -e "${LOG_CICD} 000-default.conf"
@@ -241,6 +243,9 @@ jobs:
           echo -e "${LOG_CICD} a2query -m"
           docker exec nextcloudpi a2query -m |& awk "{ print \"${LOG_DIAG} \" \$0 }"
           echo -e "${LOG_CICD} apache2 -S"
+          docker exec nextcloudpi cat /etc/apache2/apache2.conf |& awk "{ print \"${LOG_DIAG} \" \$0 }"
+          echo -e "${LOG_CICD} /etc/apache2/envvars"
+          docker exec nextcloudpi cat /etc/apache2/envvars |& awk "{ print \"${LOG_DIAG} \" \$0 }"
           docker exec nextcloudpi apache2 -S |& awk "{ print \"${LOG_DIAG} \" \$0 }"
           echo -e "${LOG_CICD} apache2 config files"
           docker exec nextcloudpi ls -l /etc/apache2/sites-{available,enabled} /data/etc/apache2/sites-{available,enabled} |& awk "{ print \"${LOG_DIAG} \" \$0 }"
