build-docker.yml: Readd apache fix
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -121,7 +121,21 @@ jobs:
           docker volume create ncdata
           platform=linux/${ARCH?}
           [[ "$ARCH" == 'x86' ]] && platform=linux/amd64
-          docker run -v ncdata:/data -d --rm -p 8443:443 -p 4443:4443 --name nextcloudpi thecalcaholic/ncp-internal-${ARCH}:${{ github.run_id }} localhost
+          tmpdir=$(mktemp -d)
+          pushd "$tmpdir" 
+          # ${{ steps.get_previous_version.outputs.previous_version }}
+          cat <<EOF > ./Dockerfile
+          FROM --platform=$platform ownyourbits/nextcloudpi-${ARCH}:${{ github.run_id }}
+          
+          RUN echo 'Mutex posixsem' >> /etc/apache2/mods-available/ssl.conf
+          EOF
+          docker buildx build --platform "$platform" -t ncp-testing -f Dockerfile --load .
+          echo "${{ secrets.DOCKER_PASSWORD_INTERNAL }}" | docker login -u "${{ secrets.DOCKER_LOGIN_INTERNAL }}" --password-stdin
+          docker tag ncp-testing thecalcaholic/ncp-internal-${ARCH}:debug
+          docker push thecalcaholic/ncp-internal-${ARCH}:debug
+          popd
+          rm -r "$tmpdir"
+          docker run -v ncdata:/data -d --rm -p 8443:443 -p 4443:4443 --name nextcloudpi ncp-testing localhost
 
       - name: Checkout code
         uses: actions/checkout@v3
